@@ -6,6 +6,7 @@
 */
 
 #import <Cocoa/Cocoa.h>
+#import <Carbon/Carbon.h>
 
 typedef enum {
     WKCertificateParseResultSucceeded  = 0,
@@ -87,3 +88,9 @@ CFReadStreamRef WKCreateCustomCFReadStream(void *(*formCreate)(CFReadStreamRef, 
 
 void WKSetFocusRingStyle(NSFocusRingPlacement placement, int radius, NSColor *color);
 void WKSetDragImage(NSImage *image, NSPoint offset);
+
+void WKSendUserChangeNotifications();
+BOOL WKConvertNSEventToCarbonEvent(EventRecord *carbonEvent, NSEvent *cocoaEvent);
+void WKSendKeyEventToTSM(NSEvent *theEvent);
+void WKCallDrawingNotification(CGrafPtr port, Rect *bounds);
+
